updated enrollment logic correctly
